<resources>
    <string name="app_name">Care</string>

    <string name="family1">Mom</string>
    <string name="family2">Dad</string>
    <string name="family3">Honey</string>
    <string name="family4">Baby</string>

    <string name="chat_way_1">Text</string>
    <string name="chat_way_2">Talk</string>
    <string name="chat_way_3">Video</string>

    <string name="systemInfo">Alert</string>
    <string name="verification">Do you want to exit?</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>

    <string name="discovery_moments">Moments</string>
    <string name="discovery_neighbors">Neighbors</string>
    <string name="discovery_scan">Scan</string>
    <string name="discovery_entertainment">Entertainment</string>

    <string name="me">Me</string>

    <string name="title_activity_me">Me</string>
    <string name="title_activity_discovery">Discovery</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_ring">Ring</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_plan">Plan</string>



    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="title_activity_moments">Moments</string>
    <string name="title_activity_locate">Locate</string>
    <string name="title_activity_text">Text</string>
    <string name="title_activity_talk">Talk</string>
    <string name="title_activity_video_talk">VideoTalk</string>

    <string name="activity_contacts_contacts">Contacts</string>
    <string name="activity_contacts_add">Add</string>

    <string name="activity_discovery_discovery">Discovery</string>

    <string name="activity_login_hint_phone">Phone Number</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_new">New Account>></string>

    <string name="activity_me_me">Me</string>
    <string name="activity_me_profile">Profile</string>
    <string name="activity_me_edit">Edit</string>
    <string name="activity_me_push">Push</string>
    <string name="activity_me_location">Location</string>
    <string name="activity_me_logout">Log out</string>

    <string name="activity_moments">Moments</string>

    <string name="activity_plan_1">Plan</string>
    <string name="activity_plan_2">Plan</string>

    <string name="activity_register_1">Register</string>

    <string name="activity_talk_volume">Volume:</string>

    <string name="activity_text_send">Send</string>

    <string name="activity_videotalk_volume">Volume:</string>

    <string name="fragment_profile_profile">Personal Profile</string>
    <string name="fragment_profile_name">Name</string>
    <string name="fragment_profile_gender">Gender</string>
    <string name="fragment_profile_dob">Date of Birth</string>
    <string name="fragment_profile_address">Home Address</string>
    <string name="fragment_profile_em1">Emergency Comtact 1</string>
    <string name="fragment_profile_em2">Emergency Comtact 2</string>
    <string name="fragment_profile_mc">Medical Record</string>
    <string name="fragment_profile_aller">Allergy</string>

    <string name="choose">Please choose</string>

    <string name="list_detail">DETAIL</string>
    <string name="list_chat">CHAT</string>
    <string name="list_locate">LOCATE</string>

    <string name="ring_title">Emergency call</string>

</resources>
