<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                tools:context="com.example.n56.care.View.Me"
                android:id="@+id/me">

    <TextView
        android:id="@+id/Me"
        android:text="@string/activity_me_me"
        android:gravity="center"
        android:textSize="@dimen/normal_title_size"
        android:textColor="@color/normal_title_color"
        android:background="@color/normal_title_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/Me"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/Lin1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/activity_me_profile"
            android:gravity="center_vertical|left"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/normal_text_color"
            android:id="@+id/textView" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/flat_text_color"
            android:id="@+id/button"
            android:background="@drawable/shape_normal"
            android:text="@string/activity_me_edit"
            android:layout_gravity="center_vertical|right"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/Lin2"
        android:layout_below="@+id/Lin1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/activity_me_push"
            android:gravity="center_vertical|left"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/normal_text_color"
            android:id="@+id/textView2" />

        <Switch
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:id="@+id/switch1"
            android:textSize="@dimen/normal_text_size"
            android:textOff="Off"
            android:textOn="On"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/Lin3"
        android:layout_below="@+id/Lin2"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/imageView3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:text="@string/activity_me_location"
            android:gravity="center_vertical|left"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/normal_text_color"
            android:id="@+id/textView3" />

        <Switch
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:id="@+id/switch2"
            android:textSize="@dimen/normal_text_size"
            android:textOff="Off"
            android:textOn="On"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/Lin4"
        android:layout_below="@+id/Lin3">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/Lin5"
        android:layout_below="@+id/Lin4"
        android:gravity="center"
        >
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/button2"
            android:textSize="@dimen/normal_text_size"
            android:textColor="#ffff5344"
            android:background="@drawable/shape_login"
            android:text="@string/activity_me_logout"

            />
    </LinearLayout>
</RelativeLayout>
